DTO added