@@ -1,7 +1,6 @@
 package com.example.offerbrowserprototype.domain.usseroffer;
 
 import com.example.offerbrowserprototype.domain.offer.Offer;
-import com.example.offerbrowserprototype.domain.mapper.OfferMapper;
 import com.example.offerbrowserprototype.infrastructure.repository.OfferRepository;
 import com.example.offerbrowserprototype.infrastructure.repository.UserOfferStatusRepository;
 import org.springframework.stereotype.Component;
@@ -12,27 +11,25 @@ import java.util.stream.Collectors;
 @Component
 public class UserOfferQueryHandler {
 
-    private final UserOfferStatusRepository userOfferStatusRepository;
     private final OfferRepository offerRepository;
-    private final OfferMapper offerMapper;
+    private final UserOfferStatusRepository userOfferStatusRepository;
 
-    public UserOfferQueryHandler(UserOfferStatusRepository userOfferStatusRepository,
-                                 OfferRepository offerRepository,
-                                 OfferMapper offerMapper) {
-        this.userOfferStatusRepository = userOfferStatusRepository;
+    public UserOfferQueryHandler(OfferRepository offerRepository,
+                                 UserOfferStatusRepository userOfferStatusRepository) {
         this.offerRepository = offerRepository;
-        this.offerMapper = offerMapper;
+        this.userOfferStatusRepository = userOfferStatusRepository;
     }
 
     public List<Offer> getNotAppliedOffersForUser(String userId) {
-        // Pobierz ID zaaplikowanych ofert
-        List<String> appliedOfferIds = userOfferStatusRepository
-                .findByUserIdAndAppliedTrue(userId)
+        // Pobierz wszystkie zaaplikowane oferty dla użytkownika
+        List<String> appliedOfferIds = userOfferStatusRepository.findByUserIdAndAppliedTrue(userId)
                 .stream()
-                .map(UserOfferStatus::getOfferId)
-                .toList();
+                .map(status -> status.getOfferId())
+                .collect(Collectors.toList());
 
         // Pobierz oferty, które nie są zaaplikowane
-        return offerRepository.findByIdNotIn(appliedOfferIds);
+        return offerRepository.findAll().stream()
+                .filter(offer -> !appliedOfferIds.contains(offer.getId()))
+                .collect(Collectors.toList());
     }
 }
